Changelog
=========

1.0 (unreleased)
------------------

- Radio buttons on forms should be on the left in Bootstrap.
  [davidjb]
- Refactor breadcrumb replacement to use XPath in Boostrap.
  [davidjb]
- Ensure breadcrumbs display on themed pages in Bootstrap.
  [davidjb]
- Allow dragging to occur on table listings in Bootstrap.
  [davidjb]
- Use label text as placeholder for site search in Bootstrap.
  [davidjb]
- Fix typo for rule for manage portlets rule in Bootstrap.
  [davidjb]
- Ensure relative paths are used for Plone logo resources for correct
  loading on sites not served at a domain root.
  [davidjb]
- Ensure correct path naming for default (blue) Plone logos.
  [davidjb]
- Ensure separated items in edit bar menus are included in Bootstrap
  themes.
  [davidjb]
- Update Bootstrap to 2.3.2 (and add upgrade instructions).
  [davidjb]
- Ensure Bootstrap and Foundation buttons have value, name, 
  and other attributes copied to ensure form actions can take place.
  [davidjb]
   

1.0dev (unreleased)
------------------

- Initial release
